--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
     "npm": ">=9.0.0"
   },
   "scripts": {
+    "prebuild": "rimraf dist",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "node dist/main.js",
+    "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-    "postinstall": "npm run build",
+    "heroku-postbuild": "NODE_OPTIONS=--max_old_space_size=2560 npm run build",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -60,6 +61,7 @@
     "passport-local": "^1.0.0",
     "pg": "^8.14.1",
     "reflect-metadata": "^0.2.2",
+    "rimraf": "^5.0.5",
     "rxjs": "^7.8.1",
     "socket.io": "^4.8.1",
     "ts-node": "^10.9.2",
